[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Game/Game.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Game/Player.gd" type="Script" id=3]
[ext_resource path="res://Tileset/tileset.tres" type="TileSet" id=4]
[ext_resource path="res://Fonts/OpenSans-SemiBold.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]

size = 52
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Game" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Player" type="KinematicBody2D" parent="." index="0" instance=ExtResource( 2 )]

position = Vector2( 256, 320 )
input_pickable = false
collision_layer = 1
collision_mask = 3
collision/safe_margin = 0.08
script = ExtResource( 3 )
_sections_unfolded = [ "Collision", "Linear", "Z Index" ]

[node name="Walls" type="TileMap" parent="." index="1"]

mode = 0
tile_set = ExtResource( 4 )
cell_size = Vector2( 128, 128 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.2
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 65536, 0, 0, 65539, 0, 0, 65546, 0, 0, 65548, 0, 0, 65555, 0, 0, 131072, 0, 0, 131075, 0, 0, 131082, 0, 0, 131084, 0, 0, 131091, 0, 0, 196608, 0, 0, 196611, 0, 0, 196618, 0, 0, 196620, 0, 0, 196627, 0, 0, 262144, 0, 0, 262147, 0, 0, 262154, 0, 0, 262156, 0, 0, 262163, 0, 0, 327680, 0, 0, 327683, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327689, 0, 0, 327690, 0, 0, 327692, 0, 0, 327699, 0, 0, 393216, 0, 0, 393219, 0, 0, 393222, 0, 0, 393226, 0, 0, 393228, 0, 0, 393235, 0, 0, 458752, 0, 0, 458755, 0, 0, 458758, 0, 0, 458762, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 524288, 0, 0, 524294, 0, 0, 524307, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0 )
_sections_unfolded = [ "Cell", "Collision", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Vents" type="TileMap" parent="." index="2"]

mode = 0
tile_set = ExtResource( 4 )
cell_size = Vector2( 128, 128 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = true
collision_friction = 1.0
collision_bounce = 0.2
collision_layer = 2
collision_mask = 0
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 327688, 1, 0, 458767, 1, 0, 524291, 1, 0 )
_sections_unfolded = [ "Cell", "Collision", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Control" type="Control" parent="." index="3"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1248.0
margin_right = 2496.0
margin_bottom = 1376.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Focus", "Margin", "Rect" ]

[node name="HBoxContainer" type="HBoxContainer" parent="Control" index="0"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -140.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 32
alignment = 0
_sections_unfolded = [ "Anchor", "Focus", "Hint", "Margin", "Mouse", "Rect", "Size Flags", "Theme", "custom_constants" ]

[node name="ButtonCold" type="Button" parent="Control/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 832.0
margin_bottom = 140.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Cold"
flat = false
align = 1
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Size Flags" ]

[node name="ButtonNormal" type="Button" parent="Control/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 864.0
margin_right = 1696.0
margin_bottom = 140.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Normal"
flat = false
align = 1
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Size Flags" ]

[node name="ButtonHot" type="Button" parent="Control/HBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1728.0
margin_right = 2560.0
margin_bottom = 140.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Hot"
flat = false
align = 1
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Size Flags" ]


